<resources>

    <string name="app_name">SRI facture</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SRI facture</string>
    
<!-- 
****************************************************************************************
							STRINGS USADOS PARA TEXTVIEWS 
****************************************************************************************
-->

<!-- GENERICO -->
	<string name="tv_tdeducible">Total deducible</string> 

<!-- LOGIN -->

	<string name="tv_user">Usuario</string>
	<string name="tv_pass">Contraseña</string>
	<string name="tv_registro">Registrarse</string>

<!-- NEW USER -->
	
	<string name="tv_nombre">Nombre</string>
	<string name="tv_apellido">Apellido</string>
	<string name="tv_cedula">Cedula</string>
	<string name="tv_tperiodo">Tipo de periodo</string>
	<string name="tv_n_user">Usuario</string>
	<string name="tv_n_pass">Contraseña</string>
	<string name="tv_r_pass">Vuelva a escribir su contraseña</string>
	
<!-- LISTA DE FACTURAS -->
	<string name="tv_add">Añadir</string>
	<string name="tv_edit">Editar</string>
	<string name="tv_delete">Eliminar</string>	 	

<!-- NUEVA FACTURA -->
	<string name="tv_numero">Numero</string>
	<string name="tv_fecha">Fecha</string>
	<string name="tv_tgasto">Total Gasto</string>
	<string name="tv_rucp">RUC del proveedor</string>
	<string name="tv_ciudad">Ciudad</string>
	<string name="tv_proveedor">Proveedor</string>
	<string name="tv_nlocal">Nombre del local</string>
	<string name="tv_imagen">Imagen</string>
	<string name="tv_foto">Tomar foto</string>
		
<!-- NUEVO DEDUCIBLE -->	
	<string name="tv_talimentacion">Total alimentacion</string>
	<string name="tv_teducacion">Total educación</string>
	<string name="tv_tsalud">Total salud</string>
	<string name="tv_tvestimenta">Total vestimenta</string>
	<string name="tv_tvivienda">Total vivienda</string>

<!-- Reportes -->
	<string name="tv_ralimentacion">Reportes de alimentacion</string>
	<string name="tv_reducacion">Reporte de educación</string>
	<string name="tv_rsalud">Reporte de salud</string>
	<string name="tv_rvestimenta">Reporte de vestimenta</string>
	<string name="tv_rvivienda">Reporte de vivienda</string>

<!-- ViewReport -->	
	<string name="tv_send">Enviar por mail</string>	
<!-- 
*******************************************************************************************
							 STRINGS USADOS EN BOTONES 
*******************************************************************************************
-->

<!-- GENERICO -->
	<string name="btn_guardar">Guardar</string>
	<string name="btn_editar">Editar</string>

<!-- LOGIN -->
	<string name="btn_ingresar">Ingresar</string>	
	
<!-- MENU -->
	<string name="btn_admf">Administrar Facturas</string>
	<string name="btn_ctrib">Grafico de deducibles</string>
	<string name="btn_reporte">Reportes</string>
	<string name="btn_cuentauser">Cuentas de usuario</string>
	<string name="btn_salir">Salir</string>	
	
<!-- NEW USER -->
	
<!-- NUEVA FACTURA -->
	<string name="btn_ded">Detalle de deducibles</string>
	
	
<!-- 
***********************************************************************************************
							 STRINGS USADOS EN ACCIONES
***********************************************************************************************
 -->	

<!-- GENERICO -->
	<string name="act_save">Save</string>
	
<!-- LOGIN -->
	<string name="act_ingreso">ingreso</string>
	<string name="act_registro">registro</string>
	

<!-- MENU -->
	<string name="act_admf">Administrar_Facturas</string>
	<string name="act_ctrib">Calendario_Tributario</string>
	<string name="act_reporte">Reportes</string>
	<string name="act_cuentauser">Cuentas_de_usuario</string>
	<string name="act_salir">Salir</string>	

<!-- NEW USER -->
	<string name="act_save_nuser">Guardar</string>
	
<!-- LISTA DE FACTURAS -->
	<string name="act_add">Add</string>
	<string name="act_edit">Edit</string>
	<string name="act_delete">Delete</string>

<!-- NUEVA FACTURA -->
	<string name="act_dded">detDeducibles</string>
	<string name="act_foto">Foto</string>

<!-- VER USUARIO -->
	<string name="act_ed_user">editarUsuario</string>	

<!-- REPORTES -->
	<string name="act_ralimentacion">Ralimentacion</string>
	<string name="act_reducacion">Reducacion</string>
	<string name="act_rsalud">Rsalud</string>
	<string name="act_rvestimenta">Rvestimenta</string>
	<string name="act_rvivienda">Rvivienda</string>	
	
<!-- ViewReport -->	
	<string name="act_send">Enviar</string>	
</resources>