<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/tv_nombre"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/vnombre"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/tv_apellido"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/vapellido"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/tv_cedula"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/vcedula"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/tv_tperiodo"
            android:textSize="@dimen/padding_large" />

        <TextView
            android:id="@+id/vperiodo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="@string/act_ed_user"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/boton_up"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/btn_editar"
                android:textColor="#020000"
                android:textSize="@dimen/padding_large" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>