
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/tv_numero" />

	            <EditText
	                android:id="@+id/numero"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="numberDecimal" >
	
	                <requestFocus />
	            </EditText>
			</LinearLayout>
			
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="2"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/tv_fecha" />

	            <TextView
	                android:id="@+id/dateDisplay"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="TextView" />

	            <Button
	                android:id="@+id/pickDate"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="Change" />

			</LinearLayout>
			
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/tv_tgasto" />
	

	            <EditText
	                android:id="@+id/gasto"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="numberDecimal" />

	        </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/tv_tdeducible" />
	

	            <TextView
	                android:id="@+id/tdeducible"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1" />

	        </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/tv_rucp" />
	
	            <EditText
	                android:id="@+id/rprov"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:ems="10" />
	        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="@string/act_dded" >

	            <TextView
	                android:id="@+id/textView10"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/btn_ded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="@string/act_save" >

	            <TextView
	                android:id="@+id/textView11"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/btn_guardar" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>